steven fixed backout to cover no white space

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,6 @@
-
+body {
+  height: 100%;
+}
 button:hover {
   border-color: #0d6efd;
   background-color: #0d6efd;
@@ -13,4 +15,7 @@ button:hover {
   justify-content: space-between;
 }
 
+#root {
+  height: 100%;
+}
 
